FIX collapse

--- a/src/assets/components/CampaignView.css
+++ b/src/assets/components/CampaignView.css
@@ -36,7 +36,6 @@
 	align-items: center;
 	gap: var(--space-2);
 	user-select: none;
-	width: 100%;
 	cursor: pointer;
 }
 
